--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2769,7 +2769,7 @@ aside.side_bar.slider-btn .btn-slider {transform: translateY(-50%) rotate(180deg
 #sub-category-create-modal .modal-dialog .modal-content .forms-inputs input {height: 48px; border: 1px solid rgba(188, 188, 188, 1); padding: 11px; border-radius: 10px;}
 
 .invite-wrap .forms-inputs label {font-size: 16px; margin: 0 0 10px;}
-.invite-wrap .forms-inputs input { height: 52px; border: 1px solid rgba(188, 188, 188, 1);  padding: 11px; border-radius: 10px;}
+.invite-wrap .forms-inputs input[type="text"] { height: 52px; border: 1px solid rgba(188, 188, 188, 1);  padding: 11px; border-radius: 10px;}
 
 
 @media screen and (max-width:1500px) {
