--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2772,6 +2772,10 @@ aside.side_bar.slider-btn .btn-slider {transform: translateY(-50%) rotate(180deg
 .invite-wrap .forms-inputs label {font-size: 16px; margin: 0 0 10px;}
 .invite-wrap .forms-inputs input[type="text"] { height: 52px; border: 1px solid rgba(188, 188, 188, 1);  padding: 11px; border-radius: 10px;}
 
+.admin_section .forms-inputs label {font-size: 16px; margin: 0 0 10px;}
+.admin_section .forms-inputs input[type="text"] { height: 52px; border: 1px solid rgba(188, 188, 188, 1); padding: 11px; border-radius: 10px;}
+.admin_section button.btn.btn-dark { margin: 12px 0 0;}
+
 
 @media screen and (max-width:1500px) {
 .lesson .lesson-row { padding-top: 56px;}
