--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2898,6 +2898,10 @@ nav.navbar { padding: 10px 6%;}
 
 
 @media screen and (max-width:480px) {
+
+.content_outer { padding: 0 5%;}
+.slider-active .content_outer { padding: 0 5%;}
+
 .payment-wrap .tab-content .tab-pane .payment-workshop .amout-item .col-md-8 {width: 100%;}
 .payment-wrap .tab-content .tab-pane .payment-workshop .amout-item .col-md-4 {width: 100%; padding: 0;}
 .payment-wrap .tab-content .tab-pane .payment-workshop .amout-item .col-md-8 .forms-inputs.mb-4 { margin: 0 0 15px !important;}
