--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2630,9 +2630,11 @@ aside.side_bar.slider-btn .btn-slider {transform: translateY(-50%) rotate(180deg
 .lesson-pagination .exam-right.exam-progress-inner-item .progress-main .bookmark img { width: 100%;display: block; transition: all .25s ease-in-out;}
 .lesson-pagination .exam-right.exam-progress-inner-item .progress-main .bookmark  img.inactive-img { position: absolute; top: 0; left: 0; opacity: 0;}
 .lesson-pagination .exam-right.exam-progress-inner-item .progress-main .bookmark .active img.inactive-img { opacity: 1;}
-.lesson-pagination .exam-right.exam-progress-inner-item .progress-main .bookmark a { cursor: pointer;}
+.lesson-pagination .exam-right.exam-progress-inner-item .progress-main .bookmark a { cursor: pointer; display: flex; flex-wrap: wrap; align-items: center; padding: 20px; justify-content: center;}
 .exam-footer .lesson-pagination .lesson-finish {margin-left: 0;}
-
+.lesson-pagination .exam-right.exam-progress-inner-item .progress-main .bookmark .flagclass {font-size: 26px; color: #000;}
+.lesson-pagination .exam-right.exam-progress-inner-item .progress-main .bookmark  #flagimages { width: 40px; margin: 0 0 0 20px;position: relative;}
+.lesson-pagination .exam-right.exam-progress-inner-item .progress-main .bookmark .active .active-img {opacity: 0;}
 
 .support-content { background: #FFFFFF; padding: 20px 20px; box-shadow: 4px 0px 16px 0px #0000000A; border-radius: 10px; margin: 16px 0 20px !important;}
 .support-content p { font-size: 20px; line-height: 1.5; margin: 0 0 15px;}
