--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -637,7 +637,7 @@ margin-left:auto;
 .exam-container .container-wrap .lesson .lesson-body .mcq-container .form-group .form-check input {
   width: 20px;
   height: 20px;
-  border-radius: 3px;
+  border-radius: 50%;
   border: 1px solid;
   position: relative;
   top: -3px;
