--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -909,10 +909,15 @@ border-radius: 7px;
 }
 .time-up {
   background-color: red;
-  animation: heartbeat 1s infinite;
+  animation: beat .25s infinite alternate;
+	transform-origin: center;
   text-align: center;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  transition: background-color 0.3s ease, transform 0.3s ease;
+  transition: 0.3s ease, transform 0.3s ease;
+}
+
+@keyframes beat{
+	to { transform: scale(1.4); }
 }
 
 .modal-expand {
