--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -908,15 +908,21 @@ border-radius: 7px;
   }
 }
 .time-up {
-  background-color: red;
-  animation: beat .25s infinite alternate;
-	transform-origin: center;
-  text-align: center;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  text-decoration: blink;
+  -webkit-animation-name: blinker;
+  -webkit-animation-duration: 0.6s;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-timing-function: ease-in-out;
+  -webkit-animation-direction: alternate;
 }
 
-@keyframes beat{
-	to { transform: scale(1.4); }
+@-webkit-keyframes blinker {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
 }
 
 .modal-expand {
