--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -407,7 +407,7 @@ button.close {
   width: 90%;
   float: none;
   padding: 50px;
-  margin:50px auto 0;
+  margin:0 auto 0;
   background: #ffff;
   box-shadow: 4px 0px 16px 0px #0000000A;
   border-radius: 10px;
@@ -523,7 +523,7 @@ margin-left:auto;
 }
 
 .exam-container .container-wrap .lesson .lesson-body {
-  margin: 24px 0 0;
+  margin: 0 0 0;
 }
 
 .exam-container .container-wrap .lesson .lesson-body .video-title {
