--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -497,7 +497,7 @@ button.close {
   display:flex;
   flex-wrap: wrap;
   margin: 0 auto;
-  width:100%;
+  width:90%;
   padding:0;
   background: #E1E4EE;
 }
@@ -572,9 +572,8 @@ margin-left:auto;
   position: fixed;
   bottom: 0;
   left: 0;
-  width: 87%;
-    margin: 0 auto;
-    right: 0;
+  width: 100%;
+  padding: 0 30px;
 }
 
 .exam-container.exam-video .container-wrap {
