--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -520,6 +520,7 @@ margin-left:auto;
   height: 100%;
   margin:auto;
   border: none;
+  width: 200px;
 }
 
 .exam-container .container-wrap .lesson .lesson-body {
