--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2732,6 +2732,7 @@ aside.side_bar.slider-btn .btn-slider {transform: translateY(-50%) rotate(180deg
 
 .post-section .post-row {width: 100%;display: flex; flex-wrap: wrap; margin: 0 0 25px;}
 .post-section .post-row .post-container1 {width: 28%; margin: 0 2% 0 0; overflow-y: auto; max-height: calc(100vh - 188px);}
+.post-section .post-row .post-container1::-webkit-scrollbar {display: none;}
 .post-section .post-row .post-container1 .post-col1 {width: 100%; background: #fff; padding: 25px; border-radius: 10px;}
 .post-section .post-row .post-container1 .row {margin: 0;}
 .post-section .post-row .post-container1 .post-col1 h4 {font-size: 20px; font-weight: 600; color: #000;}
