--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1652,9 +1652,16 @@ section.post-section .post-container .post-item .post-content{
 }
 .post-wrap div.selected-files .selected-item {
   width:20%;
-  padding:10px 15px 
+  padding:10px 15px;
+  position:relative;
 } 
 
+.post-wrap div.selected-files .selected-item button.close {position: absolute;right: 0;top: 0;}
+
+.post-wrap div.selected-files .selected-item button.close span {
+    border: none;
+    padding: 0 6px;
+}
 
 
 .side_bar { width: 105px;height: 100vh;padding: 30px 0; position: fixed;background: #ffff;z-index: 99;box-shadow: 4px 0px 16px 0px #0000000A;left: 0;border-radius: 0 10px 10px 0;top: 80px;     border: 1px solid #dadada; transition: all .25s ease-in-out;}
