--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -513,7 +513,7 @@ margin-left:auto;
 .lesson-pagination .button{
   display: flex;
   color: #FFF;
-  background:#365497;
+  background:#6072FF;
   padding:5px 15px;
   justify-content: center;
   align-items: center;
