--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -412,7 +412,6 @@ button.close {
   box-shadow: 4px 0px 16px 0px #0000000A;
   border-radius: 0;
   max-width: 1320px;
-  min-height: calc(100vh - 230px);
 }
 .lesson .lesson-title {
   margin: 0 30px 0 35px;
@@ -1856,7 +1855,7 @@ aside.side_bar.slider-btn .btn-slider {transform: translateY(-50%) rotate(180deg
 
 
 .exam-container .mcq-container-wrap {padding: 0; max-width: 100%;}
-.exam-container .mcq-container-wrap .lesson .lesson-body .mcq-container {width: 100%; padding: 50px; display: flex; flex-wrap: wrap; justify-content: space-between; position: relative;}
+.exam-container .mcq-container-wrap .lesson .lesson-body .mcq-container {width: 100%; padding: 50px; display: flex; flex-wrap: wrap; justify-content: space-between; position: relative;    min-height: calc(100vh - 230px);}
 .exam-container .mcq-container-wrap .lesson .lesson-body .mcq-container .mcq-group { width: 50%; padding: 0 35px 0 0;}
 .exam-container .mcq-container-wrap .lesson .lesson-body .mcq-container .mcq-answer { width: 50%; padding: 0 0 0 35px;}
 .exam-container .mcq-container-wrap .lesson .lesson-body .mcq-container:after { content: ""; position: absolute; width: 1px; height: 100%; top: 0; left: 50%; transform: translateX(-50%); background: #1599f2;}
