--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -761,6 +761,7 @@ border-radius: 7px;
   padding:0;
   height: 100%;
   background:#365497;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
 }
 .exam-progress>.exam-progress-inner {
   width: 100%;
@@ -771,6 +772,7 @@ border-radius: 7px;
   justify-content: space-between;
   padding: 15px 5%;
   position: relative;
+  
 }
 .exam-progress>.exam-progress-inner>.exam-left {
   width: auto;
