--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2683,7 +2683,7 @@ aside.side_bar.slider-btn .btn-slider {transform: translateY(-50%) rotate(180deg
 .private_section {background: #FFFFFF; margin: 20px 0 0; padding: 40px 30px; border-radius: 20px;}
 .private_section .workshopclass .card { border: 1px solid #3F8D26; border-radius: 20px; transition: all .25s ease-in-out; height: 100%;}
 .private_section .card .card-body { padding: 40px;}
-.private_section .card .card-body .category-image {width: 100%;margin: 0 auto 20px;height: 260px;text-align: center;}
+.private_section .card .card-body .category-image {width: 100%;margin: 0 auto 20px;height: 260px;text-align: center;position: relative;}
 .private_section .card .card-body .category-content { width: 100%; flex: none;}
 .private_section .card .card-body .category-image img {width: 100%;height: 100%;max-width: 250px;object-fit: contain;}
 .private_section .workshopclass .card-body .category h3 { font-size: 24px; color: #3F8D26; margin: 0 0 20px;}
@@ -2696,6 +2696,15 @@ aside.side_bar.slider-btn .btn-slider {transform: translateY(-50%) rotate(180deg
 .private_section .card .card-body .category button.btn.btn-dark { float: right; margin: -15px -25px 0 10px;}
 .private_section .card .card-body .category .card-box { display: flex; flex-wrap: wrap; align-items: flex-start;}
 
+.private_section .card .card-body .category-image span { display: block;}
+.private_section .card .card-body .category-image button { width: 25px; height: 25px;border-radius: 50%;color: #fff; background: #000; border: 1px solid #0000; font-size: 14px; font-weight: 600; position: absolute; right: 0; top: 0;}
+.private_section .card .card-body .form-group .forms-inputs input {height: 52px; border: 1px solid rgba(188, 188, 188, 1); padding: 11px; border-radius: 10px;}
+.private_section .card .card-body .form-group .forms-inputs textarea { border: 1px solid rgba(188, 188, 188, 1); padding: 11px; border-radius: 10px;}
+.private_section .card .card-body .forms-inputs button.btn.btn-primary { background: #000;  border: 1px solid #000;}
+.private_section .card .card-body .forms-inputs button.btn.btn-secondary { background: none;  color: #000;  border: 1px solid #000;}
+.private_section .card .card-body .forms-inputs button.btn.btn-primary:hover { background: none; color: #000;}
+.private_section .card .card-body .forms-inputs button.btn.btn-secondary:hover {background: #000; color: #ffff;}
+.private_section .card .card-body .category-image label { display: none;}
 
 #live-private-modal .modal-dialog { max-width: 1000px;}
 #live-private-modal .modal-dialog .modal-header { border: none;}
@@ -2846,14 +2855,6 @@ aside.side_bar.slider-btn .btn-slider {transform: translateY(-50%) rotate(180deg
 .post-wrap .choice .choice-button button.btn.btn-dark:hover img { filter: invert(1);}
 
 
-.private_section .card .card-body .category-image span { display: block;}
-.private_section .card .card-body .category-image button { width: 25px; height: 25px;border-radius: 50%;color: #fff; background: #000; border: 1px solid #0000; font-size: 14px; font-weight: 600; position: absolute; right: 0; top: 0;}
-.private_section .card .card-body .form-group .forms-inputs input {height: 52px; border: 1px solid rgba(188, 188, 188, 1); padding: 11px; border-radius: 10px;}
-.private_section .card .card-body .form-group .forms-inputs textarea { border: 1px solid rgba(188, 188, 188, 1); padding: 11px; border-radius: 10px;}
-.private_section .card .card-body .forms-inputs button.btn.btn-primary { background: #000;  border: 1px solid #000;}
-.private_section .card .card-body .forms-inputs button.btn.btn-secondary { background: none;  color: #000;  border: 1px solid #000;}
-.private_section .card .card-body .forms-inputs button.btn.btn-primary:hover { background: none; color: #000;}
-.private_section .card .card-body .forms-inputs button.btn.btn-secondary:hover {background: #000; color: #ffff;}
 
 
 
