--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2884,6 +2884,14 @@ aside.side_bar.slider-btn .btn-slider {transform: translateY(-50%) rotate(180deg
 .invite-wrap .tab-content .tab-pane .numericalsectionclass .numericalclass button.btn.btn-danger { position: absolute; right: -15px; top: -15px; background: #000; border: 1px solid #000; width: 25px; height: 25px; padding: 0; border-radius: 50%; font-size: 14px; font-weight: 500;}
 
 
+.exam-container.topictestclass .summery-wrap .summery-title h1 { font-size: 28px; border-left: 3px solid #ef9b10; padding-left: 15px; line-height: 1;}
+.exam-container.topictestclass .summery-wrap .summery-title {align-items: center;}
+.exam-container.topictestclass .summery-wrap .summery-title .back-btn { margin: 0 10px 0 0; width: 35px; height: 35px;}
+.exam-container.topictestclass .summery-wrap h2 { font-weight: 600; font-size: 22px;}
+.exam-container.topictestclass .summery-wrap .time-of-exam { float: right; margin: -69px 0 0 auto;}
+.exam-container.topictestclass .summery-wrap .time-of-exam label { font-size: 22px; font-weight: 600;}
+.exam-container.topictestclass .summery-wrap .time-of-exam input { font-size: 22px; font-weight: 600; width: 83px;}
+
 
 @media screen and (max-width:1500px) {
 .lesson .lesson-row { padding-top: 56px;}
