--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -412,6 +412,7 @@ button.close {
   box-shadow: 4px 0px 16px 0px #0000000A;
   border-radius: 0;
   max-width: 1320px;
+  min-height: calc(100vh - 135px);
 }
 .lesson .lesson-title {
   margin: 0 30px 0 35px;
