--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -851,6 +851,7 @@ border-radius: 7px;
   margin: 0 5px;
   padding: 15px 80px;
   height: 100%;
+  align-items: center;
 }
 .progress-menu .menu-text{
   margin: 3px 13px;
@@ -860,6 +861,17 @@ border-radius: 7px;
   font-weight: 600;
   color: #005d93;
 }
+
+.progress-menu .menu-text #menu-text {
+  display: flex;
+  align-items: center;
+}
+
+.progress-menu .menu-text #menu-text span {
+  font-size: 45px;
+  margin: 0 5px;
+}
+
 .progress-menu .menu-icon{
   margin:5px 5px 0px 0px;
 }
