--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2692,7 +2692,7 @@ aside.side_bar.slider-btn .btn-slider {transform: translateY(-50%) rotate(180deg
 .lesson-exit img { width: 100%; display: block;}
 .examclass .lesson-pagination .lesson-right.pagination-arrow { margin-left: auto;}
 
-.mcq-title-text {width: 100%; padding: 20px 20px 10px; border: 1px solid #414141; border-radius: 10px; margin: 0 0 20px;}
+.mcq-title-text {width: 100%; padding: 20px 20px 10px; border: 1px solid #414141; border-radius: 0; margin: 0 0 20px;}
 
 .modal { background: rgb(0 0 0 / 50%);}
 
