--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2921,7 +2921,7 @@ aside.side_bar.slider-btn .btn-slider {transform: translateY(-50%) rotate(180deg
 .questionclass .mcq-container-wrap .lesson .lesson-body .mcq-container .mcq-answer::-webkit-scrollbar-thumb { background: #005d93;  border-radius: 8px;}
 
 
-
+#report-post .modal-dialog { top: 50%; transform: translateY(-50%); margin: 0  auto;}
 #report-post .modal-dialog .modal-content {border-radius: 10px;padding: 30px 30px 10px;}
 #report-post .modal-dialog .modal-content .modal-header {padding: 0; border: none;}
 #report-post .modal-dialog .modal-content .modal-header h5 {color: #218df8; font-size: 20px; margin: 0 0 20px; font-weight: 600;}
