--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1879,11 +1879,11 @@ aside.side_bar.slider-btn .btn-slider {transform: translateY(-50%) rotate(180deg
 .exam-container .mcq-container-wrap .lesson .lesson-body .mcq-container .mcq-group h3 {font-size: 20px; font-weight: 500; color: #000000; margin: 0 0 20px;}
 
 
-.exam-container .question-bank-review { max-width: 100%; padding: 0; position: relative;}
+.exam-container .question-bank-review { max-width: 100%; padding: 0; position: relative;min-height: inherit;}
 .exam-container .question-bank-review .lesson .lesson-body { margin: 0;}
-.exam-container .question-bank-review .lesson .lesson-body .mcq-container { width: 100%; display: flex; flex-wrap: wrap;  padding: 50px 50px 0;  position: relative;}
-.exam-container .question-bank-review .lesson .lesson-body .mcq-container .mcq-group { width: 50%; padding: 0 35px 0 0;}
-.exam-container .question-bank-review .lesson .lesson-body .mcq-container .mcq-group-right { width: 50%;  padding: 0 0 0 35px;}
+.exam-container .question-bank-review .lesson .lesson-body .mcq-container { width: 100%; display: flex; flex-wrap: wrap;  padding: 0 0 0;  position: relative;}
+.exam-container .question-bank-review .lesson .lesson-body .mcq-container .mcq-group { width: 50%; padding: 50px; height: calc(100vh - 200px); overflow-y: auto;}
+.exam-container .question-bank-review .lesson .lesson-body .mcq-container .mcq-group-right { width: 50%;  padding: 50px; height: calc(100vh - 200px); overflow-y: auto;}
 .exam-container .question-bank-review .lesson .lesson-body  .col-md-12 { padding: 0;}
 .exam-container .question-bank-review .lesson  .lesson-exit { position: absolute; top: 50px; left: 40px;z-index: 9;}
 .exam-container .question-bank-review .lesson .lesson-body h3 { font-size: 20px; font-weight: 500; color: #000000; margin: 0 0 20px; padding: 0 0 0 35px;}
@@ -1892,6 +1892,13 @@ aside.side_bar.slider-btn .btn-slider {transform: translateY(-50%) rotate(180deg
 .exam-container .question-bank-review .lesson #lesson-footer-pagination button.btn { display: inline-block;}
 .exam-container .question-bank-review .lesson .lesson-body .mcq-container .mcq-group-right .mcq-explanation { font-size: 20px; font-weight: 600; margin: 0 0 20px;}
 .exam-container .question-bank-review .lesson .lesson-body .mcq-container .mcq-group h5 { font-weight: 600; font-size: 17px; margin: 0 0 16px 35px; padding: 2px 5px; border-left: 3px solid #ef9b10;}
+
+.exam-container .question-bank-review .lesson .lesson-body .mcq-container .mcq-group::-webkit-scrollbar {width: 10px;}
+.exam-container .question-bank-review .lesson .lesson-body .mcq-container .mcq-group::-webkit-scrollbar-track { background: #f1f1f1; border-radius: 8px;}
+.exam-container .question-bank-review .lesson .lesson-body .mcq-container .mcq-group::-webkit-scrollbar-thumb { background: #005d93; border-radius: 8px;}
+.exam-container .question-bank-review .lesson .lesson-body .mcq-container .mcq-group-right::-webkit-scrollbar { width: 10px;}
+.exam-container .question-bank-review .lesson .lesson-body .mcq-container .mcq-group-right::-webkit-scrollbar-track { background: #f1f1f1; border-radius: 8px;}
+.exam-container .question-bank-review .lesson .lesson-body .mcq-container .mcq-group-right::-webkit-scrollbar-thumb { background: #005d93;  border-radius: 8px;}
 
 
 .card-links {border: none; border-radius: 10px;}
