--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2406,6 +2406,7 @@ aside.side_bar.slider-btn .btn-slider {transform: translateY(-50%) rotate(180deg
   border: 1px solid rgba(188, 188, 188, 1);
   padding: 11px;
   border-radius: 10px;
+  min-width: inherit;
 }
 
 .payment-wrap .tab-content .amount-form .amout-item .form-group label {
