--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -520,16 +520,21 @@ margin-left:auto;
   margin:auto;
   border: none;
   width: 200px;
+  position: relative;
 }
 
 .lesson-pagination .right-btn img {
   width: 12px;
   margin: 0 0 0 10px;
+  position: absolute;
+  right: 20px;
 }
 
 .lesson-pagination .left-btn img {
   width: 12px;
   margin: 0 10px 0 0;
+  position: absolute;
+  left: 20px;
 }
 
 .exam-footer.criticalclass .lesson-pagination .lesson-finish {
@@ -539,6 +544,8 @@ margin-left:auto;
 .lesson-pagination .finish-btn img {
   width: 12px;
   margin: 0 0 0 10px;
+  position: absolute;
+  right: 20px;
 }
 
 
